<resources>

    <string name="app_name">ParkNow</string>
    <string name="splash_screen_title">ParkNow by ADN Trading</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="login_title">User Login</string>
    <string name="register_now">Register Now</string>
    
    <string name="registration_title">User Registration</string>
    <string name="emaiId_hint">Email Id</string>
    <string name="name_hint">Name</string>
    <string name="mobileNo_hint">Mobile No.</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="register_button">Register</string>
    <string name="all_field_mandatory">All fields are mandatory !!</string>
    <string name="wait_a_min_dialog_message">Please wait a min ...</string>
    <string name="server_error">Server error !! Please try again.</string>
    <string name="other_error">Something went wrong !! Please try again.</string>
    <string name="registration_successful_message">Thanks for registering !!</string>
    <string name="password_missmatch_error">Password and Confirm Password mismatching !!</string>
    <string name="registration_dialog">Please wait registering ...</string>
    <string name="user_exists_error">Username already exists ...</string>
    <string name="login_check_credentials_error">Please check your credentials ...</string>
    <string name="check_network">Please check your internet coonection ...</string>
    <string name="owner_button">Owner</string>
    <string name="renter_button">Renter</string>
    <string name="tap_to_back">Tap back button in order to exit</string>
    <string name="booked_history_button">Booked History</string>
    <string name="move_marker">To move the marker position hold the marker.</string>
    <string name="unable_to_create_map">Sorry! unable to create maps</string>
    <string name="add_parking_space_title">Add new parking space</string>
    <string name="address_hint">Address</string>
    <string name="area_desc">Area Description</string>
    <string name="save_button">Save My Space</string>
    <string name="price_hint">Price per hour</string>
    <string name="place_marker_error">Please place a marker on the map at your parking area.</string>
    <string name="parking_space_added_message">Thanks for adding your parking space.</string>
    <string name="booking_title">Booking details</string>
    <string name="hourly_rate_title">Hourly rate: </string>
    <string name="address_title">Address: </string>
    <string name="placeDescTitle">Description: </string>
    <string name="booking_from_title">Booking from: </string>
    <string name="booking_upto_title">Booking upto: </string>
    <string name="booking_date_from_title">Booking date from: </string>
    <string name="booking_date_to_title">Booking date to: </string>
    <string name="booking_date_hint">Select Date</string>
    <string name="booking_from_to_hint">Select Time</string>
    <string name="total_desc">Total Amount: </string>
    <string name="error_on_date_time">To date and time should be higher then From date and time or more than 1 Hour.</string>
	<string name="order_details_inserted_successful_message">Thanks for booking the parking space !!\nDrive Safely...</string>
	<string name="payment_done_but_server_error">Payment done but due to some network issue we can\u0027t update our server.Please contact our admistrator.</string>
	<string name="no_data_found">No Booking History Found !!</string>
	<string name="give_a_review">Give Your Review</string>
	<string name="save">Save</string>
	<string name="write_something">Right something about the place</string>
	<string name="user_review_already_exists_error">You have already given review for this parking spot.</string>
	<string name="review_successful_message">Thanks for your valuable feedback.</string>
	<string name="review">User Review</string>
			


</resources>