<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="270dp"
    android:background="@drawable/bg"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/give_a_review"
        android:textColor="@android:color/white"
        android:textSize="24dp" />

    <EditText
        android:id="@+id/editTextReview"
        android:layout_width="260dp"
        android:layout_height="90dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/txtbox"
        android:ems="10"
        android:textColor="@android:color/black"
        android:hint="@string/write_something"
        android:inputType="textMultiLine" >
    </EditText>

    <RatingBar
        android:id="@+id/ratingBarReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/blue_button"
        android:text="@string/save"
        android:textColor="@android:color/white"
        android:layout_marginBottom="10dp"
        android:onClick="savingReview" />

</LinearLayout>